; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/mtd/extr_mtdcore.c_mtd_cls_suspend.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/mtd/extr_mtdcore.c_mtd_cls_suspend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.mtd_info = type { i32 (%struct.mtd_info*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, i32)* @mtd_cls_suspend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mtd_cls_suspend(%struct.device* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.mtd_info*, align 8
  store %struct.device* %0, %struct.device** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.device*, %struct.device** %4, align 8
  %8 = call %struct.mtd_info* @dev_to_mtd(%struct.device* %7)
  store %struct.mtd_info* %8, %struct.mtd_info** %6, align 8
  %9 = load %struct.mtd_info*, %struct.mtd_info** %6, align 8
  %10 = icmp ne %struct.mtd_info* %9, null
  br i1 %10, label %11, label %22

11:                                               ; preds = %2
  %12 = load %struct.mtd_info*, %struct.mtd_info** %6, align 8
  %13 = getelementptr inbounds %struct.mtd_info, %struct.mtd_info* %12, i32 0, i32 0
  %14 = load i32 (%struct.mtd_info*)*, i32 (%struct.mtd_info*)** %13, align 8
  %15 = icmp ne i32 (%struct.mtd_info*)* %14, null
  br i1 %15, label %16, label %22

16:                                               ; preds = %11
  %17 = load %struct.mtd_info*, %struct.mtd_info** %6, align 8
  %18 = getelementptr inbounds %struct.mtd_info, %struct.mtd_info* %17, i32 0, i32 0
  %19 = load i32 (%struct.mtd_info*)*, i32 (%struct.mtd_info*)** %18, align 8
  %20 = load %struct.mtd_info*, %struct.mtd_info** %6, align 8
  %21 = call i32 %19(%struct.mtd_info* %20)
  store i32 %21, i32* %3, align 4
  br label %23

22:                                               ; preds = %11, %2
  store i32 0, i32* %3, align 4
  br label %23

23:                                               ; preds = %22, %16
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local %struct.mtd_info* @dev_to_mtd(%struct.device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
